# SDL_Tutorial

./: .gitignore  CMakeLists.txt
asset/: map.tmx
asset/animations/: bird_animations.xml  bull_animations.xml  piggy_animations.xml
src/: AssetManager.cpp  AssetManager.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  main.cpp
src/ecs/: Component.h  ComponentType.h  Entity.h  EventManager.h  World.cpp  World.h
src/ecs/system/: AnimationClip.h  AnimationSystem.h  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  DestructionSystem.h  KeyboardInputSystem.h  MovementSystem.h  RenderSystem.h  SpawnTimerSystem.h
src/manager/: Scene.cpp  Scene.h  SceneManager.h
src/utils/: Collision.cpp  Collision.h  Vector2D.cpp  Vector2D.h
